--- a/epic/epic.csproj
+++ b/epic/epic.csproj
@@ -18,6 +18,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="base64.js" />
     <Content Include="epic.js" />
     <Content Include="tools.js" />
     <Content Include="web.config">
