--- a/epic/epic.csproj
+++ b/epic/epic.csproj
@@ -18,6 +18,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="base64.js" />
+    <Content Include="browser.js" />
+    <Content Include="collections.js" />
+    <Content Include="object.js" />
     <Content Include="core.js" />
     <Content Include="tools.js" />
     <Content Include="web.config">
@@ -34,6 +37,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
