added alert component to epic.ui

--- a/epic.ui/epic.ui.csproj
+++ b/epic.ui/epic.ui.csproj
@@ -17,6 +17,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="alert.js" />
     <Content Include="core.js" />
   </ItemGroup>
   <ItemGroup>
