--- a/epic/epic.csproj
+++ b/epic/epic.csproj
@@ -17,6 +17,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="html.js" />
     <Content Include="string.js" />
     <Content Include="browser.js" />
     <Content Include="collection.js" />
