--- a/epic.ui/epic.ui.csproj
+++ b/epic.ui/epic.ui.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Content Include="alert.js" />
     <Content Include="button.js" />
+    <Content Include="notice.js" />
     <Content Include="core.js" />
     <Content Include="icon.js" />
     <Content Include="viewport.js" />
